# singapore-postcode-geocoding

./: .gitignore  LICENSE  README.md  pyproject.toml
.specstory/: .gitignore
.streamlit/: config.toml
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml
conf/test/: catalog.yml  parameters.yml  parameters_data_synthesis.yml
data/01_raw/test/: DatesofHawkerCentresClosure.csv  GreenMarkBuildings.csv  HDBCarparkInformation.csv  ListingofBuildingEnergyPerformanceData2020.csv  MCSTinformation.xlsx  ManagementCorporationStrataTitle.csv  SGOSatelliteOffices.csv
data/03_primary/singapore_postcodes_masterlist.parquet/2025-01-29T19.29.42.234Z/: singapore_postcodes_masterlist.parquet
data/03_primary/singapore_postcodes_masterlist.parquet/2025-02-11T21.27.51.862Z/: singapore_postcodes_masterlist.parquet
docs/source/: conf.py  index.rst
notebooks/: 01_eliasjw_20250115_download_all_osm_buildings.ipynb  02_eliasjw_20250115_download_and _inspect_URA_landuse_data.ipynb  03_eliasjw_20250116_download_and_inspect_external_scraped_sources.ipynb  04_eliasjw_20250123_inspect_final_postcodes.ipynb  05_eliasjw_20250124_validate_postcodes.ipynb  06_eliasjw_20250129_postcode_field_fuzzy_matching.ipynb  07_eliasjw_20250130_postcode_autofind_strategy.ipynb  08_eliasjw_20250131_regex_structured_output_tests.ipynb
src/singapore_postcode_geocoding/: __init__.py  __main__.py  pipeline_registry.py
src/singapore_postcode_geocoding/app/: main.py
src/singapore_postcode_geocoding/app/components/: data_table.py  file_uploader.py  map_view.py  sidebar.py
src/singapore_postcode_geocoding/app/config/: app_config.py
src/singapore_postcode_geocoding/app/services/: geocoding.py  session_manager.py
src/singapore_postcode_geocoding/data_validation/: README.MD  __init__.py  singapore_postcode_validation.py
src/singapore_postcode_geocoding/pipelines/data_processing/: nodes.py  pipeline.py
src/singapore_postcode_geocoding/pipelines/data_synthesis/: README.MD  nodes.py  pipeline.py
src/singapore_postcode_geocoding/pipelines/data_validation/: nodes.py
src/singapore_postcode_geocoding/pipelines/master_data_processing/: README.MD  nodes.py  pipeline.py
tests/: test_run.py
tests/pipelines/data_science/: test_pipeline.py
tests/pipelines/postcode_identification/: test_auto_identification.py
(+13 files in other folders)
