[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "singapore_postcode_geocoding"
version = "0.2"
readme = "README.md"
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro[jupyter]>=1.0.0,<2.0.0",
    "kedro-datasets[matplotlib-matplotlibwriter,pandas-csvdataset,pandas-exceldataset,pandas-parquetdataset,plotly-jsondataset,plotly-plotlydataset]==6.0.0",
    "kedro-viz>=6.7.0",
    "scikit-learn~=1.5.1",
    "seaborn~=0.12.1",
    "pyrosm>=0.6.2",
    "geopandas>=1.0.1",
    "fiona>=1.10.1",
    "requests>=2.32.3",
    "aiohttp>=3.11.11",
    "streamlit>=1.41.1",
    "humanize>=4.11.0",
    "rapidfuzz>=3.11.0",
    "ollama>=0.4.7",
    "pydantic>=2.10.5",
    "pytest>=7.4.4",
]

[project.scripts]
"singapore-postcode-geocoding" = "singapore_postcode_geocoding.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
docs = [
    "docutils<0.21",
    "sphinx>=5.3,<7.3",
    "sphinx_rtd_theme==2.0.0",
    "nbsphinx==0.8.1",
    "sphinx-autodoc-typehints==1.20.2",
    "sphinx_copybutton==0.5.2",
    "ipykernel>=5.3, <7.0",
    "Jinja2<3.2.0",
    "myst-parser>=1.0,<2.1"
]
dev = [
    "pytest-cov~=3.0",
    "pytest-mock>=1.7.1, <2.0",
    "pytest~=7.2",
    "ruff~=0.1.8"
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.kedro]
package_name = "singapore_postcode_geocoding"
project_name = "singapore-postcode-geocoding"
kedro_init_version = "1.0.0"
tools = "['Linting', 'Testing', 'Custom Logging', 'Documentation', 'Data Structure', 'Kedro Viz']"
example_pipeline = "True"
source_dir = "src"

# [tool.pytest.ini_options]
# addopts = """
# --cov-report term-missing \
# --cov src/singapore_postcode_geocoding -ra"""

# [tool.coverage.report]
# fail_under = 0
# show_missing = true
# exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
line-length = 88
show-fixes = true
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
ignore = ["E501"]  # Ruff format takes care of line-too-long
